--- a/bbt.bib
+++ b/bbt.bib
@@ -179,7 +179,7 @@
   timestamp = {2021-04-18}
 }
 
-@unpublished{Chareton2020,
+@misc{Chareton2020,
   author        = {Chareton, Christophe and Bardin, S{\'e}bastien and Bobot, Fran{\c c}ois and Perrelle, Valentin and Valiron, Beno{\^i}t},
   note          = {Extended version of: \href{http://dx.doi.org/10.1007/978-3-030-72019-3_6}{An Automated Deductive Verification Framework for Circuit-building Quantum Programs} presented at ESOP 2021},
   crossref      = {Chareton2021},
@@ -706,7 +706,7 @@
   timestamp = {2021-04-18}
 }
 
-@unpublished{Paykin2019,
+@misc{Paykin2019,
   author        = {Paykin, Jennifer and Zdancewic, Steve},
   note          = {Talk at QPL '19},
   title         = {A {{HoTT Quantum Equational Theory}} ({{Extended Version}})},
