--- a/qpv.bib
+++ b/qpv.bib
@@ -9,7 +9,7 @@
   institution = {{Los Alamos National Laboratory}}
 }
 
-@article{Selinger2004,
+@article{Selinger2004a,
   author    = {Selinger, Peter},
   journal   = {Mathematical Structures in Computer Science},
   title     = {Towards a Quantum Programming Language},
@@ -46,6 +46,7 @@
   abstract      = {We introduce the language QML, a functional language for quantum computations on finite types. Its design is guided by its categorical semantics: QML programs are interpreted by morphisms in the category FQC of finite quantum computations, which provides a constructive semantics of irreversible quantum computations realisable as quantum gates. QML integrates reversible and irreversible quantum computations in one language, using first order strict linear logic to make weakenings explicit. Strict programs are free from decoherence and hence preserve superpositions and entanglement - which is essential for quantum parallelism.},
   booktitle     = {Proceedings of the Twentieth Annual {{IEEE}} Symposium on Logic in Computer Science ({{LICS}} 2005)},
   title         = {A Functional Quantum Programming Language},
+  note          = {Introduces QML},
   year          = {2005},
   address       = {{Chicago, USA}},
   month         = jun,
@@ -126,7 +127,7 @@
   url        = {https://files.sri.inf.ethz.ch/website/papers/pldi20-silq.pdf}
 }
 
-@inproceedings{Amy2019a,
+@inproceedings{Amy2019,
   author    = {Amy, Matthew},
   booktitle = {Proceedings of the 15th International Conference on Quantum Physics and Logic, Halifax, Canada, 3-7th June 2018},
   title     = {Towards Large-Scale Functional Verification of Universal Quantum Circuits},
@@ -171,11 +172,11 @@
   eprint        = {0903.0340}
 }
 
-@unpublished{Paykin2019,
+@misc{Paykin2019,
   author        = {Paykin, Jennifer and Zdancewic, Steve},
-  note          = {Talk at Quantum Physics and Logic, Chapman University},
+  note          = {Talk at QPL '19},
   title         = {A {{HoTT Quantum Equational Theory}} ({{Extended Version}})},
-  month         = jun,
+  month         = apr,
   year          = {2019},
   abstract      = {This paper presents an equational theory for the QRAM model of quantum computation, formulated as an embedded language inside of homotopy type theory. The embedded language approach is highly expressive, and reflects the style of state-of-the art quantum languages like Quipper and QWIRE. The embedding takes advantage of features of homotopy type theory to encode unitary transformations as higher inductive paths, simplifying the presentation of an equational theory. We prove that this equational theory is sound and complete with respect to established models of quantum computation.},
   eprint        = {1904.04371},
