Normalize name initials (keep for physics; expand otherwise)

--- a/bbt.bib
+++ b/bbt.bib
@@ -1,5 +1,5 @@
 @inproceedings{Abramsky2004,
-  author        = {Abramsky, S. and Coecke, B.},
+  author        = {Abramsky, Samson and Coecke, Bob},
   booktitle     = {Proceedings of the 19th {{Annual IEEE Symposium}} on {{Logic}} in {{Computer Science}}, 2004.},
   title         = {A Categorical Semantics of Quantum Protocols},
   year          = {2004},
@@ -112,7 +112,7 @@
 }
 
 @incollection{Baez2010,
-  author        = {Baez, J. and Stay, M.},
+  author        = {Baez, John C. and Stay, Mike},
   booktitle     = {New Structures for Physics},
   publisher     = {{Springer Berlin Heidelberg}},
   title         = {Physics, Topology, Logic and Computation: {{A}} Rosetta Stone},
@@ -164,19 +164,20 @@
 }
 
 @article{Briegel2009,
-  author    = {Briegel, H. J. and Browne, D. E. and D{\"u}r, W. and Raussendorf, R. and {Van den Nest}, M.},
-  journal   = {Nature Physics},
-  title     = {Measurement-Based Quantum Computation},
-  year      = {2009},
-  month     = jan,
-  number    = {1},
-  pages     = {19--26},
-  volume    = {5},
-  abstract  = {Quantum computation offers a promising new kind of information processing, where the non-classical features of quantum mechanics are harnessed and exploited. A number of models of quantum computation exist. These models have been shown to be formally equivalent, but their underlying elementary concepts and the requirements for their practical realization can differ significantly. A particularly exciting paradigm is that of measurement-based quantum computation, where the processing of quantum information takes place by rounds of simple measurements on qubits prepared in a highly entangled state. We review recent developments in measurement-based quantum computation with a view to both fundamental and practical issues, in particular the power of quantum computation, the protection against noise (fault tolerance) and steps towards experimental realization. Finally, we highlight a number of connections between this field and other branches of physics and mathematics.},
-  copyright = {2009 Nature Publishing Group},
-  doi       = {10.1038/nphys1157},
-  publisher = {{Nature Publishing Group}},
-  timestamp = {2021-04-18}
+  author       = {Briegel, H. J. and Browne, D. E. and D{\"u}r, W. and Raussendorf, R. and {Van den Nest}, M.},
+  journal      = {Nature Physics},
+  title        = {Measurement-Based Quantum Computation},
+  year         = {2009},
+  month        = jan,
+  number       = {1},
+  pages        = {19--26},
+  volume       = {5},
+  abstract     = {Quantum computation offers a promising new kind of information processing, where the non-classical features of quantum mechanics are harnessed and exploited. A number of models of quantum computation exist. These models have been shown to be formally equivalent, but their underlying elementary concepts and the requirements for their practical realization can differ significantly. A particularly exciting paradigm is that of measurement-based quantum computation, where the processing of quantum information takes place by rounds of simple measurements on qubits prepared in a highly entangled state. We review recent developments in measurement-based quantum computation with a view to both fundamental and practical issues, in particular the power of quantum computation, the protection against noise (fault tolerance) and steps towards experimental realization. Finally, we highlight a number of connections between this field and other branches of physics and mathematics.},
+  achiveprefix = {arxiv},
+  eprint       = {0910.1116},
+  doi          = {10.1038/nphys1157},
+  publisher    = {{Nature Publishing Group}},
+  timestamp    = {2021-04-18}
 }
 
 @misc{Chareton2020,
@@ -1002,7 +1003,7 @@
 }
 
 @inproceedings{Unruh2019a,
-  author        = {Unruh, D.},
+  author        = {Unruh, Dominique},
   booktitle     = {2019 34th {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}} ({{LICS}})},
   title         = {Quantum {{Hoare Logic}} with {{Ghost Variables}}},
   year          = {2019},
